--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Ahmad Mustafeen @ GEEK_OF_KOLACHI",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3"
   }
 }
